--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,7 +86,7 @@ cloudinary.api_key=976418171164749
 cloudinary.api_secret=f-j-krlPgMSbfR0J3y15q8FiUXA
 #--------------------------
 
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.properties.hibernate.format_sql=true
+##logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
