--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
             <version>2.2.15</version> <!-- hoặc version mới hơn -->
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+
 
         <!-- JWT -->
         <dependency>
