--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 services:
   - type: web
     name: operator-management-system
-    runtime: java
-    buildCommand: ./mvnw clean package -DskipTests
-    startCommand: java -jar target/OperatorManagementSystem-0.0.1-SNAPSHOT.jar
-    envVars:
-      - key: PORT
-        value: 8080
+    env: docker
     plan: free
+    branch: deploytest
+    dockerfilePath: ./Dockerfile
+    buildFilter:
+      paths:
+        - Dockerfile
+        - render.yaml
+        - target/OperatorManagementSystem-0.0.1-SNAPSHOT.jar
