--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,11 @@
             <artifactId>google-api-services-gmail</artifactId>
             <version>v1-rev110-1.25.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.34.1</version>
+        </dependency>
         <!-- Client để xử lý xác thực OAuth2 -->
 
         <!-- Jetty HTTP server để Google auth flow hoạt động -->
@@ -111,11 +115,6 @@
             <groupId>com.google.oauth-client</groupId>
             <artifactId>google-oauth-client-jetty</artifactId>
             <version>1.34.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client</artifactId>
-            <version>2.4.1</version> <!-- Hoặc version mới hơn -->
         </dependency>
 
         <dependency>
