--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,7 +67,8 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
-spring.datasource.hikari.max-lifetime=30000
+spring.datasource.hikari.max-lifetime=60000
+spring.datasource.hikari.keepalive-time=30000
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.leak-detection-threshold=15000
 spring.datasource.hikari.auto-commit=true
