--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,10 +93,11 @@ cloudinary.api_secret=f-j-krlPgMSbfR0J3y15q8FiUXA
 ##logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #---------------------------------------------------
-#vnpay.tmnCode=2QXUI4J4
-#vnpay.hashSecret=SECRETKEYCHO123TESTINGVN
-#vnpay.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-##vnpay.returnUrl=http://localhost:8083/api/payment/vnpay/return
+
 spring.profiles.active=dev
 booking.override-total=50000000
+#api.url=http://192.168.0.102:8888
+
+api.url=http://192.168.0.102:8888/getData
+
 
