--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
 
+jwt.secret=newSecretKeyThatInvalidatesAllOldToken
 
 
 # --------- JPA / HIBERNATE ----------
