--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,9 @@ jwt.secret=newSecretKeyThatInvalidatesAllOldToken
 # --------- JPA / HIBERNATE ----------
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-
+spring.jpa.show-sql=false
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type.descriptor.sql=OFF
 server.port=${PORT:8080}
 
 
