--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,38 @@
 spring.application.name=OperatorManagementSystem
 
 # --------- DATA SOURCE (Aiven / MySQL) ----------
-spring.datasource.url=jdbc:mysql://mysql-322855aa-hduy281205-23d2.c.aivencloud.com:26327/defaultdb?sslMode=REQUIRED
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_fcUeFmot1WRUqJMwu2h
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://mysql-322855aa-hduy281205-23d2.c.aivencloud.com:26327/defaultdb?sslMode=REQUIRED
+#spring.datasource.username=avnadmin
+#spring.datasource.password=AVNS_fcUeFmot1WRUqJMwu2h
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url= jdbc:sqlserver://localhost:1433;databaseName=SWP;encrypt=false
+spring.datasource.username=sa
+spring.datasource.password=1234
+spring.jpa.generate-ddl=false
+
+# Hibernate auto schema update
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
 
 
 jwt.secret=newSecretKeyThatInvalidatesAllOldToken
 
 
 # --------- JPA / HIBERNATE ----------
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=false
+
+
 logging.level.org.hibernate.SQL=OFF
 logging.level.org.hibernate.type.descriptor.sql=OFF
 server.port=${PORT:8080}
